ecmascript/parser/tests/test262-error-references/fail/8cf27fd80ffbc24e.js.stderr
error: Not a pattern
 --> $DIR/tests/test262-parser/fail/8cf27fd80ffbc24e.js:1:2
  |
1 | [a += b] = []
  |  ^^^^^^

